--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="text_confirm_recover"><b>Do you wish to \n send a temporary password your email?</b></string>
     <string name="emptyr_recover"><b>"Please fill in an Email "</b></string>
     <string name="for_vendor"><b>FOR VENDOR/SHOP</b></string>
+    <string name="order_id">ID</string>
 </resources>
